testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport4.errors.txt
usage.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport4.js");
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    const inst =  new x.F();
    const y = inst["my-fake-sym"];
    const z = inst[x.S];
    
==== lateBoundAssignmentDeclarationSupport4.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
    }
    F.prototype[_sym] = "ok";
    F.prototype[_str] = "ok";
    const inst =  new F();
    const _y = inst[_str];
    const _z = inst[_sym];
    module.exports.F = F;
    module.exports.S = _sym;